--- a/javascripts.html
+++ b/javascripts.html
@@ -37,5 +37,6 @@
         <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_summations/4689836948111360">Ghazi_summations</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_summations/4689836948111360/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
         <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_zoo/5266179750412288">Ghazi_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_zoo/5266179750412288/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
         <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_tag/5585975599742976">Ghazi_tag</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_tag/5585975599742976/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+        <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_contacts/5286755453943808">Ghazi_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_contacts/5286755453943808/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
     </body>
 </html>
