--- a/javascripts.html
+++ b/javascripts.html
@@ -38,5 +38,6 @@
         <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_zoo/5266179750412288">Ghazi_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_zoo/5266179750412288/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
         <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_tag/5585975599742976">Ghazi_tag</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_tag/5585975599742976/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
         <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_contacts/5286755453943808">Ghazi_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_contacts/5286755453943808/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
+        <h2><a href="https://www.khanacademy.org/computer-programming/ghazi_education/5472504115675136">Ghazi_education</a></h2><script src="https://www.khanacademy.org/computer-programming/ghazi_education/5472504115675136/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script>
     </body>
 </html>
