--- a/finalproject.html
+++ b/finalproject.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+          <style>
+           p{color:white;}
+              h1{color: #63C5DA;}  
+              body { background-color : black ;
+              width : 800px ; }
+#nav-table { width : 800px ;}
+#nav-td { width: 200px ; text-align : center ; }   
+              </style>
+        <meta charset="utf-8">
+        <title>Laila's Progamming Portfolio</title>
+    </head>
+    <body>
+        <img src="mybanner.png" width="800px">
+ <table id="nav-table">
+     <tr>
+         <td align="center"><a href="index.html"><img src="myhome.jpg"></td>
+         <td align="center"><a href="javascripts.html"><img src="javascripts.jpg"></td>
+         <td align="center"><a href="apps.html"><img src="apps.jpg"></td>
+         <td align="center"><a href="about.html"><img src="aboutme.jpg"></td>
+     </tr>
+        </table id="nav-table">
+       <h1> Final Project </h1>
+        <p> This page contains <em>"app"</em> versions of my programs that I wrote. They run in the browser of devices like phones. Put the link in the browser of your phone, or view this page and click on the link, and tey an app! </p>.
+       
+    </body>
+</html>
