--- a/apps.html
+++ b/apps.html
@@ -20,6 +20,7 @@
          <td align="center"><a href="javascripts.html"><img src="javascripts.jpg"></td>
          <td align="center"><a href="apps.html"><img src="apps.jpg"></td>
          <td align="center"><a href="about.html"><img src="aboutme.jpg"></td>
+         <td id="nav-td"><a href="finalproject.html"><img src="finalproject.png"></td>
      </tr>
         </table id="nav-table">
        <h1> Apps</h1>
