--- a/apps.html
+++ b/apps.html
@@ -5,7 +5,7 @@
            p{color:white;}
               h1{color: #63C5DA;}  
               body { background-color : black ;
-              width : 800px ; }
+              width : 1000px ; }
 #nav-table { width : 800px ;}
 #nav-td { width: 200px ; text-align : center ; }   
               </style>
@@ -20,6 +20,7 @@
          <td align="center"><a href="javascripts.html"><img src="javascripts.jpg"></td>
          <td align="center"><a href="apps.html"><img src="apps.jpg"></td>
          <td align="center"><a href="about.html"><img src="aboutme.jpg"></td>
+         <td id="nav-td"><a href="finalproject.html"><img src="finalproject.png"></td>
          <td id="nav-td"><a href="finalproject.html"><img src="finalproject.png"></td>
      </tr>
         </table id="nav-table">
